src/css/main.css
/* ... */
@media screen and (max-width: 1280px) {
  #sidebar div.inner nav {
    padding-top: 0px;
    padding-left: 100px;
    background-image: url('../assets/images/mlab-logo-alt.png');
    background-size: 60px;
    background-repeat: no-repeat;
    background-position: center left;
  }
}

span.privacyConsentMessage {
  font-size: small;
  color: rgba(255, 255, 255, 1.0);
}

/* ============================================
   Reset
   ============================================ */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em,
img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u,
i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table,
caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details,
embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby,
section, summary, time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
  display: block;
}

body {
  line-height: 1;
}

ol, ul {
  list-style: none;
}

blockquote, q {
  quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

body {
  -webkit-text-size-adjust: none;
}

*, *:before, *:after {
  box-sizing: border-box;
}

/* ============================================
   Simple Grid (replaces Skel)
   ============================================ */
.row {
  display: flex;
  flex-wrap: wrap;
  gap: 1.5em;
}

.row > * {
  flex: 1;
}

.col-6 {
  flex: 0 0 calc(50% - 0.75em);
  max-width: calc(50% - 0.75em);
}

@media screen and (max-width: 736px) {
  .row {
    flex-direction: column;
  }
  .col-6 {
    flex: 0 0 100%;
    max-width: 100%;
  }
}

/* ============================================
   Basic
   ============================================ */
html {
  scroll-behavior: smooth;
}

@media screen and (max-width: 480px) {
  html, body {
    min-width: 320px;
  }
}

body {
  background: #312450;
  -ms-overflow-style: scrollbar;
}

/* ============================================
   Typography
   ============================================ */
body, input, select, textarea {
  color: rgba(255, 255, 255, 0.55);
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16.5pt;
  font-weight: normal;
  line-height: 1.75;
}

@media screen and (max-width: 1680px) {
  body, input, select, textarea {
    font-size: 13pt;
  }
}

@media screen and (max-width: 1280px) {
  body, input, select, textarea {
    font-size: 12pt;
  }
}

@media screen and (max-width: 360px) {
  body, input, select, textarea {
    font-size: 11pt;
  }
}

a {
  transition: color 0.2s ease, border-bottom-color 0.2s ease;
  border-bottom: dotted 1px rgba(255, 255, 255, 0.35);
  color: inherit;
  text-decoration: none;
}

a:hover {
  border-bottom-color: transparent;
  color: #ffffff;
}

strong, b {
  color: #ffffff;
  font-weight: bold;
}

em, i {
  font-style: italic;
}

p {
  margin: 0 0 2em 0;
}

h1, h2, h3, h4, h5, h6 {
  color: #ffffff;
  font-weight: bold;
  line-height: 1.5;
  margin: 0 0 0.5em 0;
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
  color: inherit;
  text-decoration: none;
}

h1 { font-size: 2.75em; }
h2 { font-size: 1.75em; }
h3 { font-size: 1.1em; }
h4 { font-size: 1em; }
h5 { font-size: 0.8em; }
h6 { font-size: 0.6em; }

@media screen and (max-width: 736px) {
  h1 { font-size: 2em; }
  h2 { font-size: 1.25em; }
  h3 { font-size: 1em; }
  h4 { font-size: 0.8em; }
}

sub {
  font-size: 0.8em;
  position: relative;
  top: 0.5em;
}

sup {
  font-size: 0.8em;
  position: relative;
  top: -0.5em;
}

blockquote {
  border-left: solid 4px rgba(255, 255, 255, 0.15);
  font-style: italic;
  margin: 0 0 2em 0;
  padding: 0.5em 0 0.5em 2em;
}

code {
  background: rgba(255, 255, 255, 0.05);
  border-radius: 0.25em;
  border: solid 1px rgba(255, 255, 255, 0.15);
  font-family: "Courier New", monospace;
  font-size: 0.9em;
  margin: 0 0.25em;
  padding: 0.25em 0.65em;
}

pre {
  -webkit-overflow-scrolling: touch;
  font-family: "Courier New", monospace;
  font-size: 0.9em;
  margin: 0 0 2em 0;
}

pre code {
  display: block;
  line-height: 1.75em;
  padding: 1em 1.5em;
  overflow-x: auto;
}

hr {
  border: 0;
  border-bottom: solid 1px rgba(255, 255, 255, 0.15);
  margin: 2em 0;
}

/* ============================================
   Buttons
   ============================================ */
input[type="submit"],
input[type="reset"],
input[type="button"],
button,
.button {
  appearance: none;
  transition: border-color 0.2s ease;
  background-color: transparent;
  border: solid 1px !important;
  border-color: rgba(255, 255, 255, 0.15) !important;
  border-radius: 3em;
  color: #ffffff !important;
  cursor: pointer;
  display: inline-block;
  font-size: 0.6em;
  font-weight: bold;
  height: calc(4.75em + 2px);
  letter-spacing: 0.25em;
  line-height: 4.75em;
  outline: 0;
  padding: 0 3.75em;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  white-space: nowrap;
}

input[type="submit"]:after,
input[type="reset"]:after,
input[type="button"]:after,
button:after,
.button:after {
  transform: scale(0.25);
  pointer-events: none;
  transition: opacity 0.2s ease, transform 0.2s ease;
  background: #ffffff;
  border-radius: 3em;
  content: '';
  height: 100%;
  left: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

.button.big {
  font-size: 0.8em;
}

.button.special {
  background-color: #ffffff;
  color: #312450 !important;
}

.button.special:after {
  display: none;
}

.button.disabled,
.button:disabled {
  cursor: default;
  opacity: 0.5;
  pointer-events: none;
}

.button:hover {
  border-color: rgba(255, 255, 255, 0.55) !important;
}
/* ... */

